# sf-vfs

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
doc/: CMakeLists.txt  Doxyfile.in  Doxyfile.zh-cn.in  design.md
doc/design/: design.md
include/sfvfs/: config.h  container.h  dir.h  fsnode.h  header.h  sfvfs.h
src/: container.c  dir.c  fsnode.c  header.c  main.c  sfvfs.c
test/: CMakeLists.txt  MainTest.cpp
test/mmap/: hello.txt  test_mmap  test_mmap.c
